Chave, Certificado, Pem estão sendo mostrados na tela através do link: computer/<computer_id>/key_cert_pem/

--- a/trunk/templates/bkp/view/view_computer.html
+++ b/trunk/templates/bkp/view/view_computer.html
@@ -51,7 +51,7 @@
 	    <div class="titulo_botoes">
 		<div class="botao_acoes">
 	        <button onclick="location.href='{{script_name}}/{{comp.master_cert_dump_url}}'"><span>Dump Master Cert</span></button>
-	        <button onclick="location.href='{{script_name}}/{{comp.pem_dump_url}}'"><span>Dump Pem</span></button>
+	        <button onclick="location.href='{{script_name}}/{{comp.key_cert_pem_url}}'"><span>Key Cert Pem</span></button>
 	        <button onclick="location.href='{{script_name}}/{{comp.config_dump_url}}'"><span>Dump CFG</span></button>
 	        <form action="{{script_name}}/{{comp.run_test_url}}" method="post">
 	            <button type="submit"><span>Testar Conexão</span></button>
