Status dos serviços está sendo mostrado na página de status. Funcionalidades foram implementadas corretamente.

--- a/trunk/templates/bkp/view/view_stats.html
+++ b/trunk/templates/bkp/view/view_stats.html
@@ -8,6 +8,9 @@
 <p>Procedimentos: {{ numproc }}</p>
 <p>Computadores: {{ numcli }}</p>
 <p>Total Armazenado: {{ tmbytes }} MB</p>
+<p>Director: {{dir_status}}</p>
+<p>Storage: {{sd_status}}</p>
+<p>FileDaemon: {{fd_status}}</p>
 <br />
 
 <h2>Procedimentos Executando</h2>
