--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -52,7 +52,7 @@
 						{% endfor %}
 					</ul>
 					{% endif %}
-					<p><a href="{{script_name}}/computer/new">[+] Adicionar computador</a></p>
+					<p><a href="{{script_name}}/backup/new">[+] Adicionar computador</a></p>
 					{% endblock %}
 					
 					{% block storages %}
