--- a/trunk/templates/bkp/wizbkp/new_backup.html
+++ b/trunk/templates/bkp/wizbkp/new_backup.html
@@ -27,26 +27,36 @@
 {# Passo 2 #}
 {% ifequal backup_step 2 %}
 <form action="{{script_name}}/computer/{{comp.id}}/backup/new" method="post">
-	<h3>Procedimento</h3><br />
-
 {% if proc %}{# Se já existe procedimento, não precisa cadastrar um novo #}
 <p>Nome: {{proc.procedure_name}}</p>
 {% else %}
-    {% for field in procform %}
+    <h3>Selecione um Nome para a configuraçao</h3>
         <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field }}
+            {{ procform.procedure_name.errors }}
+            {{ procform.procedure_name.label_tag }} {{ procform.procedure_name }}
         </div>
-    {% endfor %}
 {% endif %}
-	<br /><br />	
-	<h3>Locais</h3><br />
+    <br /><br />
+	<h3>Deseja fazer Backup de Quais Pastas?</h3><br />
     {% for field in fsetform %}
         <div class="fieldWrapper">
             {{ field.errors }}
             {{ field.label_tag }} {{ field }} <button onclick="location.href='#';return false"><span>x</span></button>
         </div>
     {% endfor %}
+	<br /><br />	
+	<h3>Onde serão armazenados os Backups?</h3><br />
+        <div class="fieldWrapper">
+            {{ procform.storage.errors }}
+            {{ procform.storage.label_tag }} {{ procform.storage }}
+        </div>
+	<br /><br />
+    <h3>Nimbus Cloud Backup</h3>
+        <div class="fieldWrapper">
+            {{ procform.offsite_on.errors }}
+            <span class="inline-list">{{ procform.offsite_on.label_tag }} {{ procform.offsite_on }}</span>
+        </div>
+    <br /><br />    
 	<button onclick="location.href='#';return false"><span>Mais Locais</span></button>
 <button onclick="location.href='{{script_name}}/backup/new';return false"><span>Cancelar</span></button>
 
