--- a/trunk/templates/bkp/view/view_computer.html
+++ b/trunk/templates/bkp/view/view_computer.html
@@ -34,11 +34,19 @@
     <div class="titulo_botoes">
         <img class="ico_secao" src="{{script_name}}/static/imagens/ico_big_comp.gif" />
 	    <h2>
-	        <span>Computador</span><br/>
-	        {{ comp.computer_name }} <span class="toggle pequeno" rel="detalhes_computador_{{ comp.id }}">(ver detalhes)</span>
-	        
+	        <span class="toggle" rel="detalhes_computador_{{ comp.id }}">{{ comp.computer_name }}<br/>
+	        <span class="pequeno">+detalhes</span></span>
 	    </h2>
 	    <div class="botao_acoes">
+	        <button class="popup" rel="view_comp_02"><span>avançado</span></button>
+	        <div id="view_comp_02" class="escondido">
+    	        <button onclick="location.href='{{script_name}}/{{comp.master_cert_dump_url}}'"><span>Dump Master Cert</span></button>
+	            <button onclick="location.href='{{script_name}}/{{comp.key_cert_pem_url}}'"><span>Key Cert Pem</span></button>
+	            <button onclick="location.href='{{script_name}}/{{comp.config_dump_url}}'"><span>Dump CFG</span></button>
+	            <form action="{{script_name}}/{{comp.run_test_url}}" method="post">
+	                <button type="submit"><span>Testar Conexão</span></button>
+	            </form>
+	    	</div>
 	        <button class="popup" rel="view_comp_01"><span>ações</span></button>
 	        <div id="view_comp_01" class="escondido">
     	        <button onclick="location.href='{{script_name}}/{{comp.edit_url}}'"><span>Alterar</span></button>
@@ -47,40 +55,109 @@
 	    </div>
 	</div>
 	
-	<div class="bloco_texto escondido cookie_toggle" id="detalhes_computador_{{ comp.id }}">
-	    <div class="titulo_botoes">
-		<div class="botao_acoes">
-	        <button onclick="location.href='{{script_name}}/{{comp.master_cert_dump_url}}'"><span>Dump Master Cert</span></button>
-	        <button onclick="location.href='{{script_name}}/{{comp.key_cert_pem_url}}'"><span>Key Cert Pem</span></button>
-	        <button onclick="location.href='{{script_name}}/{{comp.config_dump_url}}'"><span>Dump CFG</span></button>
-	        <form action="{{script_name}}/{{comp.run_test_url}}" method="post">
-	            <button type="submit"><span>Testar Conexão</span></button>
-	        </form>
-		</div>
-		</div>
-
-	    <ul class="aux">
+	<div class="descricao_comp bloco_texto escondido cookie_toggle" id="detalhes_computador_{{ comp.id }}">
+	    <ul class="aux esq" style="width: 325px; float: left;">
 	        <li><strong class="label">IP:</strong> <span class="value">{{ comp.computer_ip }}</span></li>
-	        <li><strong class="label">Sistema Operacional:</strong> <span class="value">{{ comp.computer_so }}</span></li>
-	        <li><strong class="label">Descrição:</strong> <span class="value">{{ comp.computer_description }}</span></li>
+	        <li><strong class="label">Sist. Operacional:</strong> <span class="value">{{ comp.computer_so }}</span></li>
 	        <li><strong class="label">Status:</strong> <span class="value">{{ compstatus }}</span></li>
 	        <li><strong class="label">Password:</strong> <span class="value">{{ comp.computer_password }}</span></li>
 	        <li><strong class="label">Encriptação:</strong> <span class="value">{{ comp.computer_encryption }}</span></li>
 	    </ul>
+	    <div class="dir">
+	        <strong>Descrição:</strong><br/>
+	        <p>{{ comp.computer_description }}</p>
+	    </div>
 	</div>
 
     <div class="titulo_botoes">
 	    <h3>
-	        <span>Procedimentos</span>
+	        <span>Backup</span>
 	    </h3>
 	    <div class="botao_acoes">
 	        <button onclick="location.href='{{script_name}}/computer/{{comp.id}}/procedure/new';"><span class="">Adicionar</span></button>
 	    </div>
 	</div>
-	<div class="bloco_texto">
+	
 	{% if not comp.procedure_set.count %}
 	    <span>Não existem procedimentos cadastrados para este computador.</span>
 	{% endif %}
+	
+	{% for proc in comp.procedure_set.all %}
+	<div class="backup">
+	    <div class="inner-backup">
+	        <div class="nome_detalhes">
+        	    <h2>
+        	        <span class="toggle" rel="detalhes_procedimento_{{ proc.id }}">{{ proc.procedure_name }}<br/>
+        	        <span class="pequeno">+detalhes</span></span>
+        	    </h2>
+	        </div>
+	        <div class="info_basica">
+	            <span>Storage: <strong>{{ proc.storage.storage_name }}</strong></span>
+	            <span>Agendamentos: <strong>{{ proc.fileset_set.count }}</strong></span>
+	            <span>Offsite: <strong>{% if proc.offsite_on %}ATIVO{% endif %}{% if not proc.offsite_on %}Inativo{% endif %}</strong></span><br/>
+	            <span>Caminhos:
+	            <strong>{% if proc.fileset_set.count %}
+                    {% for fset in proc.fileset_set.all|slice:":3" %}
+                        {{ fset.path }}{% if not forloop.last %},{% endif %}
+                    {% endfor %}
+                    {{ proc.fileset_set.count|pluralize:"..." }}
+                {% else %}
+                    -
+                {% endif %}</strong></span>
+            </div>
+            <div class="acoes">
+                <button class="popup" rel="view_comp_02_{{ forloop.counter }}"><span>ações</span></button>
+                <div id="view_comp_02_{{ forloop.counter }}" class="escondido">
+                    <button onclick="location.href='{{script_name}}/{{proc.new_run_url}}'"><span>Executar</span></button>
+                    <button onclick="location.href='{{script_name}}/{{proc.edit_url}}'"><span>Alterar</span></button>
+                    <button onclick="location.href='{{script_name}}/{{proc.delete_url}}'" class="red"><span>Remover</span></button>
+                </div>
+            </div>
+	    </div>
+	    <div id="detalhes_procedimento_{{ proc.id }}" class="detalhes_procedimento escondido">
+            <div class="storage coluna primeira">
+                Storage:<br/>
+                <a href="{{ script_name }}/{{ proc.storage.view_url }}">{{ proc.storage.storage_name }}</a>
+            </div>
+            <div class="caminhos coluna">
+                Caminhos:<br/>
+                <div class="bloco_bg">
+                {% for fset in proc.fileset_set.all %}
+                    {{ fset.path }}<br/>
+                    <!--<button onclick="location.href='{{script_name}}/{{fset.delete_url}}'" class="button_delete" title="Remover este item."><span>Remover</span></button>-->
+                {% endfor %}
+                </div>
+            </div>
+            <div class="agendamentos coluna ultima">
+                Agendamentos:<br/>
+                {% for sched in proc.schedule_set.all %}
+                <div class="bloco_bg">
+                    {{ sched.type }}<br/>
+                    {% for wtrigg in sched.weeklytrigger_set.all %}
+                        {{ wtrigg.level }}<br/>
+                        {% for day, day_br in DAYS_OF_THE_WEEK.items %}
+                            {% if wtrigg|get_method:day %}
+                                {{ day_br }}
+                            {% endif %}
+                        {% endfor %} - {{ wtrigg.hour }}
+                    {% endfor %}
+                    {% for mtrigg in sched.monthlytrigger_set.all %}
+                        {{ mtrigg.level }}
+                        {{ mtrigg.hour }}
+                        {{ mtrigg.target_days }}
+                    {% endfor %}
+                </div>
+                {% endfor %}
+                <!--<button onclick="location.href='{{script_name}}/{{sched.edit_url}}';return false"><span>Editar</span></button>
+                <button onclick="location.href='{{script_name}}/{{sched.delete_url}}';return false" class="red"><span>Remover</span></button>-->
+            </div>
+        </div>
+    </div>
+	{% endfor %}
+	<br/>
+	
+	{% if 0 %}
+	<div class="bloco_texto">
 	
 	<table>
 	    <thead>
@@ -227,6 +304,7 @@
 	    </tbody>
 	</table>
     </div>
+    {% endif %}
 
     <div class="titulo_botoes">
 	    <h3>
