--- a/trunk/templates/bkp/computer/view_computer_config.html
+++ b/trunk/templates/bkp/computer/view_computer_config.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div class="bloco_texto">
-{% for line in computer_config %}
+{% for line in comp_config %}
 {{ line }}<br />
 {% endfor %}
 </div>
