--- a/trunk/templates/bkp/management/index_management.html
+++ b/trunk/templates/bkp/management/index_management.html
@@ -8,8 +8,8 @@
 
 <div class="bloco_texto">
 <ul>
-<li><a href="{{script_name}}/management/computers/">Gerenciar Computadores</a></li>
-<li><a href="{{script_name}}/management/storages/">Gerenciar Storages</a></li>
+<li><a href="{{script_name}}/management/computers/list">Gerenciar Computadores</a></li>
+<li><a href="{{script_name}}/management/storages/list">Gerenciar Storages</a></li>
 </ul>
 </div>
 {% endblock %}
