--- a/trunk/templates/bkp/management/list_computers.html
+++ b/trunk/templates/bkp/management/list_computers.html
@@ -12,7 +12,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for comp in comps %}
+            {% for comp in comp_list %}
             <tr>
                 <td>{{comp.computer_name}}</td>
                 <td>{{comp.computer_ip}}</td>
