--- a/trunk/templates/bkp/management/list_storages.html
+++ b/trunk/templates/bkp/management/list_storages.html
@@ -12,7 +12,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for sto in stors %}
+            {% for sto in sto_list %}
             <tr>
                 <td>{{sto.storage_name}}</td>
                 <td>{{sto.storage_ip}}</td>
