--- a/trunk/templates/bkp/wizard/computer/computer_wizard.html
+++ b/trunk/templates/bkp/wizard/computer/computer_wizard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <hr />
 
-    {% include 'bkp/wizbkp_steps.html' %}
+    {% include 'bkp/wizard/computer/computer_wizard_partial.html' %}
 
 	<div class="bloco_texto">
 
