--- a/trunk/templates/bkp/procedure/edit_procedure.html
+++ b/trunk/templates/bkp/procedure/edit_procedure.html
@@ -5,7 +5,7 @@
 <h2> Alterar Procedimento </h2>
 
 
-<form action="{{script_name}}/computer/{{comp.id}}/procedure/{{proc.id}}/update" method="post">
+<form action="{{script_name}}/{{proc.update_url}}" method="post">
     {% for field in procform %}
         <div class="fieldWrapper">
             {{ field.errors }}
