--- a/trunk/templates/bkp/computer/view_computer.html
+++ b/trunk/templates/bkp/computer/view_computer.html
@@ -129,19 +129,20 @@
                 Agendamentos:<br/>
                 {% for sched in proc.schedule_set.all %}
                 <div class="bloco_bg">
-                    {{ sched.type }}<br/>
                     {% for wtrigg in sched.weeklytrigger_set.all %}
-                        {{ wtrigg.level }}<br/>
+                        {{ wtrigg.level_friendly }}<br/>
+                        {{ sched.type_friendly }}<br/>
                         {% for day, day_br in DAYS_OF_THE_WEEK.items %}
                             {% if wtrigg|get_method:day %}
                                 {{ day_br }}
                             {% endif %}
-                        {% endfor %} - {{ wtrigg.hour }}
+                        {% endfor %} as {{ wtrigg.hour }}
                     {% endfor %}
                     {% for mtrigg in sched.monthlytrigger_set.all %}
-                        {{ mtrigg.level }}
+                        {{ mtrigg.level_friendly }}<br />
+                        {{ sched.type_friendly }}<br/>
+                        {{ mtrigg.target_days }} as
                         {{ mtrigg.hour }}
-                        {{ mtrigg.target_days }}
                     {% endfor %}
                 </div>
                 {% endfor %}
