--- a/trunk/templates/bkp/management/list_storages.html
+++ b/trunk/templates/bkp/management/list_storages.html
@@ -2,6 +2,20 @@
 
 {% block content %}
 
+<h2>Gerenciar</h2>
+<ul>
+<li><a href="{{script_name}}/management/">Principal</a></li>
+<li><a href="{{script_name}}/management/computers/list">Computadores</a></li>
+<li>Backups</li>
+<li><a href="{{script_name}}/management/storages/list">Storages</a></li>
+</ul>
+<br />
+
+<div class="titulo_botoes">
+<h2>Storages</h2>
+</div>
+
+<div class="bloco_texto">
     <table>
         <thead>
             <tr>
@@ -24,6 +38,6 @@
             {% endfor %}
         </tbody>
     </table>
-
+</div>
 
 {% endblock %}
