--- a/trunk/templates/bkp/computer/view_computer.html
+++ b/trunk/templates/bkp/computer/view_computer.html
@@ -1,4 +1,4 @@
-{% extends "bkp/base.html" %}
+{% extends "templates/bkp/base.html" %}
 {% load bkp_extras %}
 {% block headtags %}
     <script type="text/javascript">
