--- a/trunk/templates/bkp/procedure/new_procedure.html
+++ b/trunk/templates/bkp/procedure/new_procedure.html
@@ -1,4 +1,4 @@
-{% extends "bkp/base.html" %}
+{% extends "templates/bkp/base.html" %}
 {% block content %}
 
 <form action="{{script_name}}/computer/{{comp.id}}/procedure/" method="post">
