Adicionando compatibilidade com Django 1.1

--- a/trunk/templates/bkp/schedule/new_schedule.html
+++ b/trunk/templates/bkp/schedule/new_schedule.html
@@ -1,4 +1,4 @@
-{% extends "templates/bkp/base.html" %}
+{% extends "bkp/base.html" %}
 {% block content %}
 
 <form action="{{script_name}}/computer/{{comp.id}}/procedure/{{proc.id}}/schedule/" method="post">
