--- a/trunk/templates/bkp/wizard/computer/computer_wizard.html
+++ b/trunk/templates/bkp/wizard/computer/computer_wizard.html
@@ -1,9 +1,9 @@
-{% extends "templates/bkp/base.html" %}
+{% extends "bkp/base.html" %}
 {% load bkp_extras %}
 {% block content %}
 <hr />
 
-    {% include 'templates/bkp/wizard/computer/computer_wizard_partial.html' %}
+    {% include 'bkp/wizard/computer/computer_wizard_partial.html' %}
 
 	<div class="bloco_texto">
 
