--- a/trunk/templates/bkp/wizard/restore/restore_wizard.html
+++ b/trunk/templates/bkp/wizard/restore/restore_wizard.html
@@ -1,4 +1,4 @@
-{% extends "templates/bkp/base.html" %}
+{% extends "bkp/base.html" %}
 {% load bkp_extras %}
 
 {% block headtags %}
@@ -15,7 +15,7 @@
 {% block content %}
 <hr />
 
-    {% include 'templates/bkp/wizard/restore/restore_wizard_partial.html' %}
+    {% include 'bkp/wizard/restore/restore_wizard_partial.html' %}
 
 <!--
 	<div class="bloco_texto">
@@ -153,7 +153,7 @@
 	
 	<div class="bloco_texto">
 		<ul class="filetree">
-		{% include 'templates/bkp/wizard/restore/restore_wizard_tree_partial.html' %}
+		{% include 'bkp/wizard/restore/restore_wizard_tree_partial.html' %}
 		</ul>
 
 	{% for field in restore_form %}
