Criei o menu duplo. Quando clica em uma aba principal o menu aparece logo abaixo.

--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -35,6 +35,7 @@
                     <p>Você não está autenticado.</p>
                     {% endif %}
                 </div>
+				{% block horizontal_menu %}{% endblock %}
 			</div>
 			<div id="conteudo">	
 				<div id="sidebar">
