--- a/trunk/templates/bkp/static/estilo.css
+++ b/trunk/templates/bkp/static/estilo.css
@@ -117,7 +117,7 @@ margin: 0 auto;
 
 #topo {
 background:transparent url(../static/imagens/topo_nimbus.jpg) top left no-repeat;
-height:108px;
+height:133px;
 margin-top:35px;
 width: 940px;
 }
@@ -183,6 +183,42 @@ float: right;
 padding: 7px 10px 0 0;
 color: #345;
 font-size: 11px;
+}
+
+
+
+/* HORIZONTAL MENU */
+
+.horizontal_menu {
+margin: 0 0 0 256px;
+overflow: hidden;
+padding-top: 4px;
+}
+
+.horizontal_menu li {
+float: left;
+margin: 0;
+list-style: none;
+padding: 0 20px 0 0;
+color: #AAA;
+}
+
+.horizontal_menu li.active {
+    font-weight: bold;
+}
+
+.horizontal_menu li:hover {
+
+}
+
+.horizontal_menu li a {
+float: left;
+color: #333;
+text-decoration: none;
+}
+
+.horizontal_menu li a:hover {
+color: #1e91a6;
 }
 
 
