--- a/trunk/templates/bkp/stats/main_statistics.html
+++ b/trunk/templates/bkp/stats/main_statistics.html
@@ -1,10 +1,11 @@
 {% extends "bkp/base.html" %}
+
+{% block horizontal_menu %}
+	{% include 'bkp/stats/menu_statistics.html' %}
+{% endblock %}
+
 {% block content %}
 <h2>Estatísticas</h2>
-<ul>
-    <li><a href="{{script_name}}/statistics/main">Principal</a></li>
-    <li><a href="{{script_name}}/statistics/history">Histórico</a></li>
-</ul>
 
 <br />
 <div class="titulo_botoes">
