--- a/trunk/templates/bkp/system/edit_globalconfig.html
+++ b/trunk/templates/bkp/system/edit_globalconfig.html
@@ -1,12 +1,13 @@
 {% extends "bkp/base.html" %}
 {% load bkp_extras %}
-{% block content %}
 
-<ul class="aux menu_horizontal config">
-    <li><a href="{{script_name}}/config/global/edit"{% ifequal config_type 'global' %} class="ativo"{% endifequal %}>Configurações globais</a></li>
-    <li><a href="{{script_name}}/config/password/edit"{% ifequal config_type 'password' %} class="ativo"{% endifequal %}>Senha</a></li>
-    <li><a href="{{script_name}}/config/offsite/edit"{% ifequal config_type 'offsite' %} class="ativo"{% endifequal %}>Offsite</a></li>
-</ul>
+{% block horizontal_menu %}
+	{% include 'bkp/system/menu_system.html' %}
+{% endblock %}
+
+
+{% block content %}
+<h2>Sistema</h2>
 
 {% ifequal config_type 'global' %}
 	    <h2>Configurações Globais</h2>
