--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -52,11 +52,7 @@
 				    <h3>Computadores</h3>
 					<ul class="aux list_computers">
 						{% for c in comps %}
-						{% ifequal c.id comp.id %}
-						<li><strong><a href="{{script_name}}/computer/{{c.id}}">{{ c.computer_name }}</a> <span>{{ c.computer_ip }}</span></strong></li>
-						{% else %}
-						<li><a href="{{script_name}}/computer/{{c.id}}">{{ c.computer_name }}</a> <span>{{ c.computer_ip }}</span></li>
-						{% endifequal %}
+						<li {% ifequal c.id comp.id %}class="active"{% endifequal %}><a href="{{script_name}}/computer/{{c.id}}">{{ c.computer_name }}</a> <span>{{ c.computer_ip }}</span></li>
 						{% endfor %}
 					</ul>
 					{% endif %}
