--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -13,6 +13,17 @@
 		<script type="text/javascript" src="{{script_name}}/static/jquery.cookie.js"></script>
 		<script type="text/javascript" src="{{script_name}}/static/main.js"></script>
 		
+		<link type="text/css" href="{{script_name}}/static/css/ui-lightness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />	
+		<script type="text/javascript" src="{{script_name}}/static/js/jquery-1.3.2.min.js"></script>
+		<script type="text/javascript" src="{{script_name}}/static/js/jquery-ui-1.7.2.custom.min.js"></script>
+		<script type="text/javascript">
+			$(function(){
+				// Tabs
+				$('#tabs').tabs();
+			});
+		</script>
+		
+		
 		{% block headtags %}{% endblock %}
 	</head>
 	<body>
