Wizard para adicionar computador foi refeito. Agora de acordo com a url ter o parametro opcional "?wizard=true" ou não, ele vai mostrar a barra do wizard "Onde | Oque | Quando".

--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -52,7 +52,7 @@
 				<div id="sidebar">
                     <h3>Atalhos</h3>
                     <ul class="aux">
-					<li><a href="{{script_name}}/backup/new">Adicionar Computador</a></li>
+					<li><a href="{{script_name}}/computer/new?wizard=true">Adicionar Computador</a></li>
                     <li><a href="{{script_name}}/backup/new" title="">Adicionar Backup</a></li>
                     <li><a href="{{script_name}}/restore/new" title="">Restaurar Arquivos</a></li>
                     </ul>
