--- a/trunk/templates/bkp/computer/view_computer.html
+++ b/trunk/templates/bkp/computer/view_computer.html
@@ -80,7 +80,7 @@
 			        <span>Backup</span>
 			    </h3>
 			    <div class="botao_acoes">
-			        <button onclick="location.href='{{script_name}}/computer/{{comp.id}}/procedure/new';"><span class="">Adicionar</span></button>
+			        <button onclick="location.href='{{script_name}}/computer/{{comp.id}}/backup/new';"><span class="">Adicionar</span></button>
 			    </div>
 			</div>
 	
