--- a/trunk/templates/bkp/computer/edit_computer.html
+++ b/trunk/templates/bkp/computer/edit_computer.html
@@ -5,12 +5,7 @@
 
 
 <form action="{{script_name}}/computer/{{comp.id}}/update" method="post">
-    {% for field in compform %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field }}
-        </div>
-    {% endfor %}
+    {% include "bkp/computer/computer_partial.html"%}
     <p><input type="submit" value="Salvar" /></p>
 </form>
 
