--- a/trunk/templates/bkp/procedure/new_procedure_schedule.html
+++ b/trunk/templates/bkp/procedure/new_procedure_schedule.html
@@ -2,12 +2,16 @@
 {% load bkp_extras %}
 {% block content %}
 
-<form action="{{script_name}}/procedure/{{proc.id}}/schedule/create" method="post">
-<div class='titulo_botões'
+
+{% if wizard %}
+{% include "bkp/wizard/backup_wizard_partial.html" %}
+{% endif %}
+
+<div class='bloco_texto'>
+    <form action="{{script_name}}/procedure/{{proc.id}}/schedule/create" method="post">
 	<h3>Agendamento</h3><br />
 	<p>Tipo: {{sched_type|friendly_sched_type}} ( <a href="{{new_schedule_url}}">trocar</a> )</p>
-</div>
-<div class='bloco_texto'>
+
     {% if sched_aux_form %}
     {# Template foi chamado pela view 'create_procedure_schedule' #}
     {# e como temos um formulário válido, vamos renderizá-lo. #}
