Correção da atualização de interface de rede

--- a/django/backup_corporativo/templates/bkp/system/edit_system_network.html
+++ b/django/backup_corporativo/templates/bkp/system/edit_system_network.html
@@ -10,7 +10,7 @@
 <h2> Alterar Interface de Rede </h2>
 <br /><br />
 
-<form action="{{script_name}}/networkinterface/update" method="post">
+<form action="{{script_name}}/system/network/update" method="post">
     {% for field in netform %}
         <div class="fieldWrapper">
             {{ field.errors }}
