Armazenando alterações temporárias para merge

--- a/django/backup_corporativo/templates/bkp/management/main_management.html
+++ b/django/backup_corporativo/templates/bkp/management/main_management.html
@@ -17,6 +17,7 @@
     <li><a href="{{script_name}}/backup/new" title="">Adicionar Backup</a></li>
     <li>Adicionar Storage</li>
     <li><a href="{{script_name}}/restore/new" title="">Restaurar Arquivos</a></li>
+    <li><a href="{{script_name}}/management/strongbox/" title="">Gerenciar Cofre</a></li>
 </ul>
 </div>
 {% endblock %}
