--- a/django/backup_corporativo/templates/bkp/management/delete_headerbkp.html
+++ b/django/backup_corporativo/templates/bkp/management/delete_headerbkp.html
@@ -9,7 +9,9 @@
 
 <div class='bloco_texto'>
     <form action="{{script_name}}/strongbox/headerbkp/{{hbkp.id}}/delete" method="post">
-    <h3>Você tem certeza que deseja remover '{{headerbkp.headerbkp_name}}'?</h3>
+    <h3>Você tem certeza que deseja remover '{{hbkp.headerbkp_name}}'?</h3>
+    <br />
+    <br />
     <button type="submit"><span>Sim</span></button>
     </form>
 </div>
